# ai-cfo-agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
agents/: __init__.py  agent_memory.py  analysis.py  autonomous_cfo.py  board_deck_generator.py  cash_flow_forecaster.py  deferred_revenue.py  executor.py  health_score.py  ingestion.py  insight_writer.py  market_agent.py  morning_briefing.py  perception.py  planning.py  quickbooks_sync.py  reasoning.py  stripe_sync.py
alembic/: env.py
alembic/versions/: 3b88199167aa_initial_schema.py  a1b2c3d4e5f6_add_agent_tables.py
api/: database.py  main.py  models.py  schemas.py
dashboard/: streamlit_app.py
data/: benchmarks.json  competitors.json  gen_drama.py  sample_financials.csv  sample_financials.xlsx
docs/: LAUNCH.md  product-hunt.md  twitter-thread.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: anomaly-ml-panel.tsx  anomaly-table.tsx  autonomous-agent-section.tsx  board-deck-download.tsx  board-prep.tsx  cash-flow-section.tsx  cfo-report.tsx  customer-matrix.tsx  dashboard-nav.tsx  deferred-revenue-card.tsx  fraud-alert-panel.tsx  health-score-card.tsx  industry-benchmarker.tsx  integrations-bar.tsx  integrations-modal.tsx  investor-update.tsx  kpi-cards.tsx  kpi-deep-dive.tsx  market-intelligence.tsx  morning-briefing.tsx  pipeline-view.tsx  runway-clock.tsx  runway-explorer.tsx  upload-zone.tsx  vc-memo.tsx
frontend/src/hooks/: use-in-view.ts  use-mouse.ts
graph/: cfo_graph.py
scripts/: playwright_check.py  send_morning_briefings.py
(+21 files in other folders)
