[tool.poetry]
name = "ai-cfo-agent"
version = "1.0.0"
description = "Autonomous multi-agent AI CFO analyst"
authors = ["Daniel Rodriguez <steven3102@hotmail.com>"]
readme = "README.md"
packages = [
  { include = "agents" },
  { include = "api" },
  { include = "graph" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.115.8"
uvicorn = { extras = ["standard"], version = "0.34.0" }
langchain = "0.3.19"
langgraph = "0.2.74"
langchain-anthropic = "0.2.4"
litellm = "1.65.4"
anthropic = "0.49.0"
polars = "1.23.0"
pydantic = "2.10.6"
sqlalchemy = { extras = ["asyncio"], version = "2.0.38" }
greenlet = ">=3.0"
asyncpg = "0.30.0"
alembic = "1.14.1"
scikit-learn = "1.6.1"
pdfplumber = "0.11.5"
pypdf = "5.3.0"
tavily-python = "0.5.0"
celery = { extras = ["redis"], version = "5.5.0" }
redis = "5.2.1"
httpx = "0.28.1"
python-multipart = "0.0.20"
python-dotenv = "1.0.1"
aiosqlite = "0.21.0"
# Free replacements for Proxycurl and Zyte
beautifulsoup4 = ">=4.12,<5"
duckduckgo-search = ">=6.0,<8"
# Live dashboard
streamlit = ">=1.40,<2"
plotly = ">=5.24,<6"
streamlit-autorefresh = ">=1.0,<2"

[tool.poetry.group.ml.dependencies]
# Install with: poetry install --with ml
# Not required when DISABLE_CHRONOS=1 (default for local dev)
torch = ">=2.0,<3"
chronos-forecasting = "1.5.1"
transformers = "4.49.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.25.3"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
